# chip8_lifter

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  example.cpp  print_ir.cpp  single_inst.cpp  to_bitcode.cpp  to_object_file.cpp
lib/: CMakeLists.txt
lib/include/chip8/: lifter.h
lib/include/chip8/embedded/: runtime.h
lib/include/chip8/lifter/: BlockCache.h  BuilderHelper.h  IREmitter.h  ModuleTools.h  parser.h
lib/include/chip8/lifter/passes/: check_for_indirect.h
lib/src/: BuilderHelper.cpp  IREmitter.cpp  ModuleTools.cpp  parser.cpp  source.cpp
lib/src/passes/: BlockCache.cpp  check_for_indirect.cpp
resources/: instructions.txt
roms/: call.ch8  draw_space_invader.ch8  draw_space_invader.ch8.bc  set_regs.ch8
tests/: CMakeLists.txt  fragments.cpp  source.cpp
